Evolution CMS 3.0 RC3

--- a/assets/docs/changelog.txt
+++ b/assets/docs/changelog.txt
@@ -1,61 +1,135 @@
 This file shows the changes in recent releases of Evolution CMS. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
-Evolution CMS 2.0.2 (Mar 13, 2020)
-* [GitHub:#c2ba16eaf] - update core vendor (Dmi3yy)
-* [GitHub:#f6d0b38e9] - update DocLister to 2.5.2 (Dmi3yy)
-* [GitHub:#5ef199e39] - update FormLister to 1.10.3 (Dmi3yy)
-* [GitHub:#55455f34e] - Fix "New Folder" icon (Sasha Beep)
-* [GitHub:#d195ec024] - [F] init some properties (Pathologic)
-* [GitHub:#2498b78a6] - core (fix) Send new manager pass by mail. (Ser1ous)
-* [GitHub:#44da6253f] - fixing icons (Sasha Beep)
-* [GitHub:#94325e240] - core (fix) add limit for search path (Ser1ous)
-* [GitHub:#076261f7e] - turn off check connect to server, need rewrite (Dmi3yy)
-* [GitHub:#3afdc6398] - fix wrong config path (mnoskov)
-* [GitHub:#0641c0377] - fix getting installed pluing (mnoskov)
-* [GitHub:#616dff82b] - keep plugin events priority on cms update (mnoskov)
-* [GitHub:#ee4112953] - keep priority on pluing update (mnoskov)
-* [GitHub:#d5cbaf115] - keep priority on pluing update (mnoskov)
-* [GitHub:#4be2e330d] - fix mistake in getChildIds core function (ashmatko)
-* [GitHub:#96d56e82c] - core (add) add SMTPAutoTLS options (Ser1ous)
-* [GitHub:#bdb9945fc] - Fixed missing translation (luigif)
-* [GitHub:#e2d6b02f5] - Allow empty namespace for snippets and chunks (mnoskov)
-* [GitHub:#b456edc93] - Remove check child directory (Ser1ous)
-* [GitHub:#b96ca08e6] - Update Parser.php (mnoskov)
-* [GitHub:#418aa4f0a] - Update Core.php (mnoskov)
-* [GitHub:#753742fd4] - [F] check this->placeholder on empty (mnoskov)
-* [GitHub:#04dc7f2c5] - FIX php notice (milkamil93)
-* [GitHub:#1b5f3f81b] - Fix enable_cache (Kamil)
-* [GitHub:#ad23c0acd] - add Redis support (Pathologic)
-* [GitHub:#566dd1e25] - by default auto_template_logic == sibling (Dmi3yy)
-* [GitHub:#3f4dacec3] - fix for nested snippet work with PHx (Dmi3yy)
-* [GitHub:#e28aefa9f] - core (fix) Fix composer.json version dotenv (Ser1ous)
-* [GitHub:#58c90bf96] - core (fix) Fix composer.json version doting (Ser1ous)
-* [GitHub:#beb0df101] - manager (fix) fix params plugin (Serious)
-
-
-Evolution CMS 2.0.1 (Nov 25, 2019)
-* [GitHub:#b79cb2a13] - fix: manager fix change theme (Serious)
-* [GitHub:#41f00c6d1] - fix: #1271 childrens should be children (Dmi3yy)
-* [GitHub:#8c0334d38] - fix: #1294 Bad layout on page template-bound resources (Dmi3yy)
-* [GitHub:#7c69af1a4] - fix: Lang issue &amp; #1272 (Dmi3yy)
-* [GitHub:#4ddf9d30b] - fix: forgot ->db-> #1265 (Dmi3yy)
-* [GitHub:#c655cf46c] - fix: issets are need in codemirror plugin #1264 (Dmi3yy)
-* [GitHub:#7005ec384] - fix: needs isset #1263 (Dmi3yy)
-* [GitHub:#c977fcae3] - fix: getDocumentObject method (Pathologic)
-* [GitHub:#bd3f836c5] - fix: need use correct cachekey with event and GET (Dmi3yy)
-* [GitHub:#3dd33e33c] - fix: manager theme bug (Dmi3yy)
-* [GitHub:#933179807] - fix: styles anв icons (Ruslan Aleev)
-* [GitHub:#74341fca8] - fix: tree icon for private resource (Mr B)
-* [GitHub:#cdca6687c] - fix: No hint path defined for [cache] (Pathologic)
-* [GitHub:#db0ec014f] - fix: Corrected lexicons, Corrected output of lexicons in template (Ruslan Aleev)
-* [GitHub:#4b8099d8b] - fix: send mail to manager e-mail. (Yevhen Lebediev)
-* [GitHub:#23c1b33dc] - fix: demo site install (Pathologic)
-* [GitHub:#e087dfc54] - fix: fullscreen tinymce hiding buttons (Mr B)
-* [GitHub:#7da9f1c20] - fix: parse plugin params (dzhuryn.volodymyr)
-* [GitHub:#cbfdb67a2] - refactor: htaccess add rules for remove // #1239 fix (Dmi3yy)
-* [GitHub:#4ea798ef8] - new: (core) Add Dynamic Relation (Ser1ous)
-
-
-Evolution CMS 2.0 (Nov 05, 2019)
-I think it’s impossible to make all the changes since version 1.4, so let's start from scratch
+Evolution CMS 3.0.0rc3 (Dec 25, 2020)
+* [GitHub:#bbd22ce8a] - core (fix) add new_id to OnDocDuplicate (aleksandrpaskevic)
+* [GitHub:#836872d28] - core (fix) fix modules install (aleksandrpaskevic)
+* [GitHub:#b5ce74a49] - fix error msg (Dmi3yy)
+* [GitHub:#857ebad49] - core (fix) fix get custom content type (aleksandrpaskevic)
+* [GitHub:#a794a15aa] - add storage_path path and fix bkmanager (Dmi3yy)
+* [GitHub:#41c3d923f] - core (fix) add moduleguid nullable in plugins (aleksandrpaskevic)
+* [GitHub:#b4b07008a] - Update DocumentCreate.php (Ser1ous)
+* [GitHub:#5e292a825] - Update DocumentEdit.php (Ser1ous)
+* [GitHub:#a2f95276b] - Hot fix (Kamil)
+* [GitHub:#a48b85fd0] - fix for Flysystem\Adapter\Local (Dmi3yy)
+* [GitHub:#dc358af2a] - Update README.md (Vitalii Rudnykh)
+* [GitHub:#dfdc7fad9] - fix, sessions dir (mnoskov)
+* [GitHub:#4ef64a5a3] - fix for DotEnv (Dmi3yy)
+* [GitHub:#251ffdd0f] - Update Core.php (Ser1ous)
+* [GitHub:#f745a02c3] - url() function - short alias for UrlProcessor::makeUrl (mnoskov)
+* [GitHub:#5547867e0] - config for custom global middleware (mnoskov)
+* [GitHub:#c6d18ea47] - laravels session, global middleware (mnoskov)
+* [GitHub:#2eda6607e] - backup (fix) fix delete user role (aleksandrpaskevic)
+* [GitHub:#7183dd968] - backup (fix) add host to backup and repair (aleksandrpaskevic)
+* [GitHub:#c7b79f212] - add id to input id (Dmi3yy)
+* [GitHub:#00fd39711] - fixed bug in create document function (dedli888)
+* [GitHub:#cbaa58b82] - fixed bug edit user role (dedli888)
+* [GitHub:#61aea2f97] - fixed bug with users (dedli888)
+* [GitHub:#fc11f7827] - core (fix) composer update (aleksandrpaskevic)
+* [GitHub:#14262f316] - core (fix) fix connect to database (aleksandrpaskevic)
+* [GitHub:#742c82172] - fix blade directive makeUrl (Dmi3yy)
+* [GitHub:#cedd7cf51] - fix blade directive makeUrl (Dmi3yy)
+* [GitHub:#c4d3696df] - Update instprocessor-fast.php (Ser1ous)
+* [GitHub:#2dd0fbcd3] - add in_manager_mode for artisan (Dmi3yy)
+* [GitHub:#10a8a8ec9] - on click element open in new tab (Dmi3yy)
+* [GitHub:#c475cdaa4] - fix bladeDirective for MakeUrl (Dmi3yy)
+* [GitHub:#cdf2f3ce5] - remove TinyMCE4 from core, use from Extras (Dmi3yy)
+* [GitHub:#df00eb7da] - fix protected property EvolutionCMS\Database::$config (mnoskov)
+* [GitHub:#02dc3b0bb] - expects parameter 1 to be string, array given (Kamil)
+* [GitHub:#25522740d] - PHP Notice: Undefined index: mgrRole (Kamil)
+* [GitHub:#1ebc2640e] - fix error "Cannot access protected property EvolutionCMS\Database::$config" (mnoskov)
+* [GitHub:#547bf3cb4] - fix for TinyMCE5 (Dmi3yy)
+* [GitHub:#a86b7643e] - core (fix) add Config facade (aleksandrpaskevic)
+* [GitHub:#b4adae86c] - core (fix) fix cli install for php 8 (aleksandrpaskevic)
+* [GitHub:#d341a8161] - PHP Notice: Undefined variable: group_tvs inmutate_content.dynamic.php:1334 (Kamil)
+* [GitHub:#7210d7df1] - core (fix) remove services who loading in config/app (aleksandrpaskevic)
+* [GitHub:#a79186669] - core (fix) fix connect to database (aleksandrpaskevic)
+* [GitHub:#855d33e5e] - core (fix) fix connect to database (aleksandrpaskevic)
+* [GitHub:#c3e1d4964] - Fixed field "properties" (Kamil)
+* [GitHub:#41d6c9237] - core (fix) Extras module php 8.0 (aleksandrpaskevic)
+* [GitHub:#9b468eeac] - core (fix) Extras module php 8.0 (aleksandrpaskevic)
+* [GitHub:#be034f9bc] - core (fix) create and edit module php 8.0 (aleksandrpaskevic)
+* [GitHub:#7d176bb52] - Update class.modxRTEbridge.php (Ser1ous)
+* [GitHub:#b3939b95a] - core (fix) fix install and user manager for php 8.0 (aleksandrpaskevic)
+* [GitHub:#069bd0c49] - core (fix) fix install for php 8.0 (aleksandrpaskevic)
+* [GitHub:#8d05ecce7] - core (fix) fix install (aleksandrpaskevic)
+* [GitHub:#a3b83f3a2] - core (fix) small fix for 8.0 (aleksandrpaskevic)
+* [GitHub:#2624228cc] - fix rotate_log query (mnoskov)
+* [GitHub:#e6dccdec9] - Fix tab name for GroupTV (Kamil)
+* [GitHub:#583ec0409] - update composer (Dmi3yy)
+* [GitHub:#2b5d0b7a1] - update composer (Dmi3yy)
+* [GitHub:#a6f05c7fa] - update composer (Dmi3yy)
+* [GitHub:#c6fdf5dd2] - Revert "core (fix) up version package league/flysystem" (Dmi3yy)
+* [GitHub:#69321da0b] - core (fix) up version package league/flysystem (aleksandrpaskevic)
+* [GitHub:#e7cd8ddf9] - core (fix) fix parent Id when press Save and New (aleksandrpaskevic)
+* [GitHub:#5405cd412] - core (fix) composer update (aleksandrpaskevic)
+* [GitHub:#7c9b2c0a9] - core (fix) fix small deprecated and install (aleksandrpaskevic)
+* [GitHub:#5ec3a535a] - Update Collection.php (Ser1ous)
+* [GitHub:#58a5f69ea] - update composer (Dmi3yy)
+* [GitHub:#a9cc2a6bd] - fix menuindex bug (Dmi3yy)
+* [GitHub:#63173eea1] - core(add) Add Auth facade who work like Laravel Auth (aleksandrpaskevic)
+* [GitHub:#9c28f84cf] - Update SiteContent.php (Ser1ous)
+* [GitHub:#adf7e3dbd] - add middleware VerifyCsrfToken (Dmi3yy)
+* [GitHub:#c63dbdb88] - add @csrf field need middleware for that (Dmi3yy)
+* [GitHub:#cebe20f74] - update composer (Dmi3yy)
+* [GitHub:#2dace8bfa] - fix error "Using $this when not in object context" (mnoskov)
+* [GitHub:#0885c7706] - update composer (Dmi3yy)
+* [GitHub:#42225d3df] - update min php to 7.3 (Dmi3yy)
+* [GitHub:#4e0e50fab] - add guzzlehttp (Dmi3yy)
+* [GitHub:#bc7378750] - add Laravel Http fix redis fix Aliases (Dmi3yy)
+* [GitHub:#bd62d51b4] - update to Laravel 8 (Dmi3yy)
+* [GitHub:#83a6c0f34] - fix make:site update (Dmi3yy)
+* [GitHub:#f6c9e310f] - fix packageCommand error with foreach not array (Dmi3yy)
+* [GitHub:#20bca41f1] - fix for composer 2.0 (Dmi3yy)
+* [GitHub:#47c96a30c] - core (fix) add version param to update evo (aleksandrpaskevic)
+* [GitHub:#c08970e93] - core (fix) add helpers and some alias to facade (aleksandrpaskevic)
+* [GitHub:#41ba99092] - fix, lost var (mnoskov)
+* [GitHub:#cf785f09d] - ability to move template initialization to `main` method (mnoskov)
+* [GitHub:#59c75fe61] - core (fix) fix Manager Middleware (aleksandrpaskevic)
+* [GitHub:#cac30cbca] - core (fix) add Manager Middleware (aleksandrpaskevic)
+* [GitHub:#45e09a298] - tv for user roles (mnoskov)
+* [GitHub:#19aa4c06e] - dependency injections in template controllers (mnoskov)
+* [GitHub:#35ff853a0] - short name for evolutionCMS (mnoskov)
+* [GitHub:#6687e789c] - tree resources moving refactor (mnoskov)
+* [GitHub:#6f7d2adda] - fix public_path function (Dmi3yy)
+* [GitHub:#8402b1f12] - fix user fields (mnoskov)
+* [GitHub:#56d407b35] - core (fix) fix getDocuments for auth web users (aleksandrpaskevic)
+* [GitHub:#f9cace8a7] - fix auto_template_logic (mnoskov)
+* [GitHub:#01792d441] - set passes if parsing forced (mnoskov)
+* [GitHub:#201363fc8] - core (add) some clear files and add @auth and @guest directives (aleksandrpaskevic)
+* [GitHub:#fb25932b7] - core (add) add auth and hash illuminate packages (aleksandrpaskevic)
+* [GitHub:#9c1eaea38] - core (fix) add delete file service.php (aleksandrpaskevic)
+* [GitHub:#99b5d4bfb] - core (fix) add alias Request for facade Laravel Request (aleksandrpaskevic)
+* [GitHub:#67bdf2e1d] - core (fix) add alias Route for facade Laravel Route (aleksandrpaskevic)
+* [GitHub:#bee714404] - core (fix) add alias Route for facade Laravel Route (aleksandrpaskevic)
+* [GitHub:#14853981b] - core (fix) fix function class (aleksandrpaskevic)
+* [GitHub:#259e23238] - core (add) add DocumentManager clearCart, delete, undelete, publish,  unpublish, setGroups (aleksandrpaskevic)
+* [GitHub:#7dd34baf9] - core (add) add DocumentManager create, edit, duplicate (aleksandrpaskevic)
+* [GitHub:#8a191b5a5] - add public_path function (Dmi3yy)
+* [GitHub:#7cf345b3c] - fix login logo for mac os safari (Dmi3yy)
+* [GitHub:#e35d2090e] - core (fix) fix UserManager::edit, add change username (aleksandrpaskevic)
+* [GitHub:#ecf8698f5] - alias for request (mnoskov)
+* [GitHub:#bbf7534e0] - Update UserSaveSettings.php (Ser1ous)
+* [GitHub:#c517fe455] - OnFileBrowserInit lost event (mnoskov)
+* [GitHub:#4d96ae260] - core (add) add UserManager::loginById (aleksandrpaskevic)
+* [GitHub:#ca471e3a3] - core (add) add clearSettings and rewrite saveSettings to update (aleksandrpaskevic)
+* [GitHub:#11bd69108] - fallback to parser method (mnoskov)
+* [GitHub:#f2bafd55c] - core (fix) prepare to DocumentManager (aleksandrpaskevic)
+* [GitHub:#3c53b9241] - core (fix) fix redirect when user auth and in group (aleksandrpaskevic)
+* [GitHub:#4a7f75c04] - core (fix) fix create closure records when duplicate documents (aleksandrpaskevic)
+* [GitHub:#05e243e8c] - core (fix) fix notice tinymce (aleksandrpaskevic)
+* [GitHub:#723d29a0e] - core (fix) fix private web documents (aleksandrpaskevic)
+* [GitHub:#c476f5265] - core (fix) fix logout errors (aleksandrpaskevic)
+* [GitHub:#27ef2f1bd] - core (add) add verification for UserManager (aleksandrpaskevic)
+* [GitHub:#c26557b7d] - core (fix) fix api functions for work with new users (aleksandrpaskevic)
+* [GitHub:#1c5f38046] - respect user setting "allow_manager_access" (mnoskov)
+* [GitHub:#38a778e8a] - core (fix) add key tree for scopeWithTVs (aleksandrpaskevic)
+* [GitHub:#457de6291] - core (fix) fix tracy panel for work with user (aleksandrpaskevic)
+* [GitHub:#95422a1a8] - core (fix) fix getDocuments (aleksandrpaskevic)
+* [GitHub:#3166ce4cf] - core (fix) fix duplicate tv (aleksandrpaskevic)
+* [GitHub:#726b562d2] - fix eventslog order direction (mnoskov)
+* [GitHub:#d478dcd75] - core (add) add middleware for check user auth (aleksandrpaskevic)
+* [GitHub:#9b09549c0] - core (add) add generate and save password function (aleksandrpaskevic)
+* [GitHub:#421cfd8c9] - core (add) add access and refresh token to login user (aleksandrpaskevic)
+* [GitHub:#7057b427a] - Update global.php (masco123)
+* [GitHub:#bf8d0431a] - core (fix) fix Deprecated (aleksandrpaskevic)
