--- a/assets/docs/changelog.txt
+++ b/assets/docs/changelog.txt
@@ -1,6 +1,41 @@
 This file shows the changes in recent releases of Evolution CMS. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+Evolution CMS 3.0 (Jan 23, 2021)
+* [GitHub:#d73ad12ac] - install (fix) Fix check prefix table (Serious)
+* [GitHub:#0cab2c12f] - core (upd) Composer update (Serious)
+* [GitHub:#73b85e6ae] - manager (fix) correct button position #1778 (Serious)
+* [GitHub:#1bc7074ad] - shame on you (Pathologic)
+* [GitHub:#7681b1da5] - Fix mispositioned checkbox (Sasha Beep)
+* [GitHub:#0dbb436c6] - install (fix) fix install create database (Serious)
+* [GitHub:#75520088b] - core (fix) more one fix for check redis connect (Serious)
+* [GitHub:#fee58d1ba] - core (fix) more one fix for check redis connect (Serious)
+* [GitHub:#2c6f9b0d3] - core (fix) additional fix for check redis connect (Serious)
+* [GitHub:#bbf112319] - manager (fix) fix user list, remove debug (Serious)
+* [GitHub:#65007163d] - core (fix) fix user list (Serious)
+* [GitHub:#6d626ff26] - core (fix) fix count elements (Serious)
+* [GitHub:#599e47a7a] - core (fix) fix ajax elements (Serious)
+* [GitHub:#9a74461c8] - core (fix) add old method for get db->config (Serious)
+* [GitHub:#a2793c158] - core (fix) add site_content table for all fields without dot in method getPageInfo (aleksandrpaskevic)
+* [GitHub:#8e6898089] - core (fix) fix pager (Serious)
+* [GitHub:#d5e143ba9] - core (fix) fix query for work with pgsql (Serious)
+* [GitHub:#8082778a7] - core (fix) fix disabled tmplvarid (Serious)
+* [GitHub:#604455d6b] - Fix Database.php settings name for connection ($modx->db->connect();) Fix bug for tvs, which using in user form
+* [GitHub:#8b69fea0b] - core (fix) fix logout when u logout (Serious)
+* [GitHub:#5df7724d1] - core (fix) fix logout when u logout (Serious)
+* [GitHub:#f899593a8] - core (fix) fix config for redis sessions (Serious)
+* [GitHub:#f368696e4] - core (fix) more one fix config for redis cache (Serious)
+* [GitHub:#162580990] - core (fix) fix config for redis cache (Serious)
+* [GitHub:#6e7cd3e7a] - Update Collection.php (Ser1ous)
+* [GitHub:#1c9b7963e] - core (fix) change redis connection config (Serious)
+* [GitHub:#9bd0698e4] - Update Core.php (Ser1ous)
+* [GitHub:#c4288a6cc] - core (fix) small fix for isset variable (Serious)
+* [GitHub:#aa9bc555e] - core (fix) add config for redis cache (Serious)
+* [GitHub:#cf4716816] - manager (add) first_name, last_name, middle_name to email message from manager (Serious)
+* [GitHub:#8c130e526] - Fix $db params in extras module (Scrimmer)
+* [GitHub:#4b7b7f88c] - fix eventlog date (mnoskov)
+
+
 Evolution CMS 3.0.0rc3 (Dec 25, 2020)
 * [GitHub:#bbd22ce8a] - core (fix) add new_id to OnDocDuplicate (aleksandrpaskevic)
 * [GitHub:#836872d28] - core (fix) fix modules install (aleksandrpaskevic)
