--- a/assets/docs/changelog.txt
+++ b/assets/docs/changelog.txt
@@ -1,7 +1,7 @@
 This file shows the changes in recent releases of Evolution CMS. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
-Evolution CMS 3.1.0 (Feb 16, 2021)
+Evolution CMS 3.1.0 (Feb 17, 2021)
 * [GitHub:#53a3b815d] - core (fix) fix select default package (Ser1ous)
 * [GitHub:#4eb046ddf] - core (fix) fix incorrect Content Type (Ser1ous)
 * [GitHub:#067b32616] - fixed Uploadable Flash Types (System Config.) #1858 (Dmi3yy)
@@ -15,6 +15,11 @@ Evolution CMS 3.1.0 (Feb 16, 2021)
 * [GitHub:#266435480] - users refactor (Pathologic)
 * [GitHub:#cb2090f06] - core (add) add work with transactions (Ser1ous)
 * [GitHub:#8626710e3] - Add properties for TV with type "number" (milkamil93)
+* [GitHub:#05e12793e] - install (fix) fix delete files and path (Ser1ous)
+* [GitHub:#5585dcbd6] - core (refactor) rename donthit to hide_from_tree column (Ser1ous)
+* [GitHub:#38dc4771a] - core (add) add NO_SESSION constant (Ser1ous)
+* [GitHub:#314e7ea6e] - install (add) add remove not used files (Ser1ous)
+* [GitHub:#cfa452baa] - core (fix) change namespace for Evolution Services (Ser1ous)
 
 
 Evolution CMS 3.0.2 (Feb 10, 2021)
