--- a/assets/docs/changelog.txt
+++ b/assets/docs/changelog.txt
@@ -1,6 +1,34 @@
 This file shows the changes in recent releases of Evolution CMS. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+Evolution CMS 3.1.3 (Mar 25, 2021)
+* [GitHub: 2d7f11f37] - update phpthumb ( migrate to composer) (Dmi3yy)
+* [GitHub: bbc97d752] - core (fix) change OnWebPagePrerender event (Serious)
+* [GitHub: a46f9542d] - fix composer-merge-plugin version (Dmi3yy)
+* [GitHub: 3ebfa0f17] - up from 1k to 3k update tree (Dmi3yy)
+* [GitHub: 8e848b7f5] - return lost constant (Pathologic)
+* [GitHub: c7debfab5] - Update ManagerTheme.php (Ser1ous)
+* [GitHub: b266175f4] - Japanese update (masco123)
+* [GitHub: cd5dc719c] - fix prefix (mnoskov)
+* [GitHub: d33b53952] - fix backtrace (mnoskov)
+* [GitHub: d4ccf1b3b] - console exceptions handling (mnoskov)
+* [GitHub: 6226f01cd] - fix password field in extras (Dmi3yy)
+* [GitHub: 801a0d9e3] - fix console detection (mnoskov)
+* [GitHub: 2acdc2e1b] - disable exceptions handler in console (mnoskov)
+* [GitHub: e7caa0920] - exceute parser only on notFound&notAllowed exception (mnoskov)
+* [GitHub: b98305d39] - artisan route:list (mnoskov)
+* [GitHub: 57aabc670] - core (fix) add check for admin (Ser1ous)
+* [GitHub: 9616055db] - Update Core.php (Ser1ous)
+* [GitHub: a561d02ef] - fix External image in [(login_logo)] #1468 (Dmi3yy)
+* [GitHub: 8d99db88c] - fix Uses Template drop-down doesn't list templates by category #1893 (Dmi3yy)
+* [GitHub: 863c2d19f] - fix [*pagetitle@1*] not working on Error page #1892 (Dmi3yy)
+* [GitHub: 6196edd22] - Update ht.access (Ser1ous)
+* [GitHub: 3b9d38ef1] - Update Core.php (Ser1ous)
+* [GitHub: d2e93ccba] - fix {{chunk[+ph+]}} (Dmi3yy)
+* [GitHub: 00359aecb] - Update Dockerfile (Pavel Bihel)
+* [GitHub: a0beb80e0] - fix getLoginUserName (mnoskov)
+
+
 Evolution CMS 3.1.2 (Feb 26, 2021)
 * [GitHub:#1cea0f175] - composer update (Dmi3yy)
 * [GitHub:#05da0b0e4] - fix query errors (Pathologic)
