--- a/assets/docs/changelog.txt
+++ b/assets/docs/changelog.txt
@@ -1,6 +1,54 @@
 This file shows the changes in recent releases of Evolution CMS. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+Evolution CMS 3.1.4 (Jun 03, 2021)
+* [GitHub: 67766f17e] - composer update (Dmi3yy)
+* [GitHub: d0e0638b9] - update git ignore (Dmi3yy)
+* [GitHub: 8ef8c052e] - fix config (mnoskov)
+* [GitHub: 7a6a7fd29] - fix setLocale (mnoskov)
+* [GitHub: d500d96ac] - fix setLocale/getLocale methods (mnoskov)
+* [GitHub: f4f6e3fe9] - disable caching headers in ap (mnoskov)
+* [GitHub: 11ae627c9] - removed environment method (mnoskov)
+* [GitHub: e87bf1de7] - core (refactor) clear sprintf (Serious)
+* [GitHub: e30d47046] - can hide modules from menu (mnoskov)
+* [GitHub: 7bfe35115] - fix routes root, fix routes maked from ajax (mnoskov)
+* [GitHub: 38f564a0f] - disable module routes in cli (mnoskov)
+* [GitHub: a63fab38a] - trailing slash removed (mnoskov)
+* [GitHub: f0a221e42] - fix validator helper (mnoskov)
+* [GitHub: 466cf4fce] - default validation messages (mnoskov)
+* [GitHub: c3c27543e] - add illuminate middlewares (mnoskov)
+* [GitHub: 733f2a5dd] - routing for modules (mnoskov)
+* [GitHub: 675ebb21a] - view, cache helpers (mnoskov)
+* [GitHub: 7a3e93279] - add route func (mnoskov)
+* [GitHub: bd8aa3745] - fix trace when file and line not set (mnoskov)
+* [GitHub: c3552bddb] - fix classnames (mnoskov)
+* [GitHub: b851b99c0] - stack renamed to global (mnoskov)
+* [GitHub: e7d7a9f7d] - middleware priority, aliases, fixed bindings (mnoskov)
+* [GitHub: 55eac0559] - core (add) add clear password fields in user settings (Serious)
+* [GitHub: 994c73280] - fix classes (mnoskov)
+* [GitHub: 18276b4fe] - restore app global middleware (mnoskov)
+* [GitHub: 5651f138f] - fix views path setting (mnoskov)
+* [GitHub: 51b34922c] - fix in CodeMirror (by_scrimm)
+* [GitHub: a4b3cb79b] - Update 1.blade.php (Ser1ous)
+* [GitHub: 270ff044b] - manager (add) add check user and resource groups (Serious)
+* [GitHub: fb207dc0b] - Update index.php (Ser1ous)
+* [GitHub: ededcfce9] - Update preload.php (Ser1ous)
+* [GitHub: 12035a690] - Update global.php (masco123)
+* [GitHub: 554f0ab83] - core (fix) Selected 'Minimum missed ID' fix #1927 (Serious)
+* [GitHub: 0722c522c] - core (fix) view unpublished doc when auth in admin (Serious)
+* [GitHub: 68f4dea82] - core (add) add OPTIMIZE TABLE function to Database class (Serious)
+* [GitHub: be28955ac] - core (fix) fix CSRF validate when install (Serious)
+* [GitHub: e20aeeed6] - Update global.php (masco123)
+* [GitHub: 6b3ac823d] - Update global.php (masco123)
+* [GitHub: 46b5f17b8] - Create ja.php (masco123)
+* [GitHub: dc61268e6] - manager (add) add preview to image TVs (Serious)
+* [GitHub: 0d5bc57dc] - manager (fix) fix check CSRF (Serious)
+* [GitHub: 5a1ea8521] - Added method, which set empty request for console. Fix for ide-helper work and other packages which work in console, and needed request object (Dzhuryn Volodymyr)
+* [GitHub: 1953356f3] - Remove blank method loadDeferredProviders from Path traits. This trait use only in one class, and parent this class has this working method (Dzhuryn Volodymyr)
+* [GitHub: dfbd47d74] - Fix possibility pass query as string param in $ modx-> db-> getValue method, which was not documented in 1.4 but worked (Dzhuryn Volodymyr)
+* [GitHub: cfaff08be] - seeders autoload by namespace (mnoskov)
+
+
 Evolution CMS 3.1.3 (Mar 25, 2021)
 * [GitHub: 2d7f11f37] - update phpthumb ( migrate to composer) (Dmi3yy)
 * [GitHub: bbc97d752] - core (fix) change OnWebPagePrerender event (Serious)
